syntax = "proto3";

option php_namespace = "App\\Grpc\\Demo";
option php_metadata_namespace = "App\\Grpc\\GPBMetadata";

service Demo {
    rpc view(DemoRequest) returns (DemoInfoReply) {}
    rpc list(DemoRequest) returns (DemoListReply) {}
}

message DemoRequest {
    string name = 1;

    int64 age = 2;
}

message DemoInfoReply {
    int64 code = 1;

    string status = 2;

    string message = 3;

    Data data = 4;
}

message DemoListReply {
    int64 code = 1;

    string status = 2;

    string message = 3;

    DataList data = 4;
}

message Data {
    int64 id = 1;

    string name = 2;

    DataType age = 3;
}

message DataList {
    repeated Data items = 1;

    Page page = 2;
}

message Page {
    int64 totalCount = 1;

    int64 currentPage = 2;

    int64 pageCount = 3;

    int64 perPage = 4;
}

message DataType {
    int64 id = 1;

    string name = 2;
}